[package]
name = "tui-rebalance"
version = "0.1.0"
authors = ["rompgadgets <rompgadgets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
csv = "1.1.1"
tabwriter = "1.1.0"
clap = "2.33.0"
num = "0.2.0"
regex = "1.4.5"
